# gpiod-auto

./: .gitmodules  README.md  dune-project  gpiod_auto.opam  gpiod_auto.opam.template
.github/workflows/: build-and-test.yml
lib/: dune  gpiod_auto.ml  gpiod_auto_stubs.cpp
test/: dune
