(library
  (public_name gpiod_auto.stubs)
  (name gpiod_auto_stubs)
  (libraries cppcaml.headers)
  (modules)
  (foreign_archives ../vendor/gpiod_internal)
  (foreign_stubs
    (language cxx)
    (names gpiod_auto_stubs)
    (include_dirs ../vendor/libgpiod/include)
    (flags :standard -Wall -O3 -std=c++23 -fconcepts-diagnostics-depth=8)
    )
  )

(library
 (public_name gpiod_auto)
 (name gpiod_auto)
 (libraries core gpiod_auto_stubs)
 (preprocess (pps ppx_jane))
 (inline_tests)
 )


(cinaps
  (files gpiod_auto.ml)
  (libraries core cppcaml.gen gpiod_auto_stubs)
  (link_flags :standard -linkall)
  )
